fix the word spacing

--- a/topic/2020TeamTaiwan/PetitionSheet.css
+++ b/topic/2020TeamTaiwan/PetitionSheet.css
@@ -6,7 +6,7 @@ div.id {
     padding-left: 56mm;
     padding-top: 112mm;
     font-size: 23px;
-    letter-spacing: 11px;
+    letter-spacing: 12px;
 }
 
 div.year {
