--- a/topic/MarriageEquality/PetitionSheet.css
+++ b/topic/MarriageEquality/PetitionSheet.css
@@ -3,10 +3,10 @@ div.sheet {
 }
 
 div.id {
-    padding-left: 60mm;
+    padding-left: 61mm;
     padding-top: 106mm;
     font-size: 23px;
-    letter-spacing: 10px;
+    letter-spacing: 11px;
 }
 
 div.year {
