--- a/topic/SexEducation/PetitionSheet.css
+++ b/topic/SexEducation/PetitionSheet.css
@@ -3,7 +3,7 @@ div.sheet {
 }
 
 div.id {
-    padding-left: 60mm;
+    padding-left: 61mm;
     padding-top: 104mm;
     font-size: 23px;
     letter-spacing: 11px;
